--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,10 @@ body {
 .card {
   width: 100%;
 }
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
